1.[scala-learning]add Process errstream into file